@@ -5,7 +5,8 @@
 * Various small musl-to-glibc adaptions for libcobalt
 * Added strlcpy and strlcat
 * Remove logwtmp
-* Replaced instances of fgetln with getline
+* GNUmakefile links with the local libcobalt directory
+* Added fgetln implementation from libbsd
 
 0.11 - Sep 17 2023
 * Removed orphaned binary
